libpmount (0.0.11) UNRELEASED; urgency=low

  * Switch to debhelper compatibility level 7.
  * Use dh_prep instead of “dh_clean -k”.
  * Now using Standards-Version 3.8.0 (no changes needed).
  * Use UTF-8 copyright symbol.

 -- Guillem Jover <guillem@debian.org>  Mon, 09 Feb 2009 22:14:00 +0200

libpmount (0.0.10) unstable; urgency=low

  * Do not strip the shared library in Makefile. (Closes: #437397)
  * Now using Standars-Version 3.7.3 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Mon, 19 May 2008 06:09:07 +0300

libpmount (0.0.9) unstable; urgency=low

  * Use dh_install instead of dh_movefiles.
    - Rename libpmount-dev.files to libmount-dev.install
    - Rename libpmount0.0.files to libpmount0.0.install.
  * Remove commented out dh_installdebconf, dh_installinit and dh_installinfo.
  * Do not ignore make errors from on clean target.
  * Use dpkg-parsechangelog instead of manually parsing the changelog to get
    the current upstream version.
  * Use binary:Version instead of deprecated Source-Version substvar.
  * Do not remove non-existent stamp files.
  * Remove useless libpmount0.0.shlibs file.

 -- Guillem Jover <guillem@debian.org>  Tue, 07 Aug 2007 02:25:30 +0300

libpmount (0.0.8) unstable; urgency=low

  * Now using Standars-Version 3.7.2 (no changes needed).
  * Switched to debhelper compat level 5.
  * Update FSF's address.

 -- Guillem Jover <guillem@debian.org>  Sun,  6 Aug 2006 03:44:52 +0300

libpmount (0.0.7) unstable; urgency=low

  * Reintroduce missing symbols. (Closes: #323338)
  * Fix testsuite generation and generalize them by moving away from shell
    script files to a proper Makefile and a C source file. (Closes: #323339)
  * Use loop devices on linux if trying to mount a file image.
  * Make static internal functions __findloop, __getloop and __clrloop.
  * Switched to versioned symbols.
  * Now using Standars-Version 3.6.2 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Sun, 21 Aug 2005 09:37:41 +0300
